--- a/app/src/main/resources/messages_de_DE.properties
+++ b/app/src/main/resources/messages_de_DE.properties
@@ -1,4 +1,3 @@
-```
 # ---- App / Titles ----
 history.title=Zugverlauf
 
@@ -53,4 +52,8 @@ game.over = Spiel vorbei
 # ---- Success / Info ----
 export.success.title=Export erfolgreich
 export.success.message=Spiel exportiert nach:
-```
+
+# ---- Pie rule ----
+game.swapPrompt=Farben tauschen?
+game.swap=Tauschen
+game.continue=Weiter
