--- a/app/src/main/resources/messages_en_US.properties
+++ b/app/src/main/resources/messages_en_US.properties
@@ -52,3 +52,8 @@ game.over = Game over
 #---- Success / Info ----
 export.success.title=Export Successful
 export.success.message=Game exported to:
+
+# ---- Pie rule ----
+game.swapPrompt=Do you want to swap colors?
+game.swap=Swap
+game.continue=Continue
