--- a/app/src/main/resources/messages_it_IT.properties
+++ b/app/src/main/resources/messages_it_IT.properties
@@ -52,3 +52,8 @@ game.over = Partita finita
 # ---- Success / Info ----
 export.success.title=Esportazione Riuscita
 export.success.message=Gioco esportato in:
+
+# ---- Pie rule ----
+game.swapPrompt=Vuoi scambiare i colori?
+game.swap=Scambia
+game.continue=Continua
