Forfeit and tests

--- a/app/src/main/resources/messages_de_DE.properties
+++ b/app/src/main/resources/messages_de_DE.properties
@@ -57,3 +57,7 @@ export.success.message=Spiel exportiert nach:
 game.swapPrompt=Farben tauschen?
 game.swap=Tauschen
 game.continue=Weiter
+
+# ---- Forfeit ----
+game.forfeit.title=Keine Zuege moeglich
+game.forfeit.message=%s hat keine legalen Zuege und setzt aus.
