--- a/app/src/main/resources/messages_en_US.properties
+++ b/app/src/main/resources/messages_en_US.properties
@@ -57,3 +57,7 @@ export.success.message=Game exported to:
 game.swapPrompt=Do you want to swap colors?
 game.swap=Swap
 game.continue=Continue
+
+#---- Forfeit ----
+game.forfeit.title=No Legal Moves
+game.forfeit.message=%s has no legal moves and forfeits the turn.
