--- a/app/src/main/resources/messages_it_IT.properties
+++ b/app/src/main/resources/messages_it_IT.properties
@@ -57,3 +57,7 @@ export.success.message=Gioco esportato in:
 game.swapPrompt=Vuoi scambiare i colori?
 game.swap=Scambia
 game.continue=Continua
+
+# ---- Forfeit ----
+game.forfeit.title=Nessuna mossa disponibile
+game.forfeit.message=%s non ha mosse disponibili e salta il turno
