Added player management feature with proper pie rule

--- a/app/src/main/resources/messages_en_US.properties
+++ b/app/src/main/resources/messages_en_US.properties
@@ -61,3 +61,10 @@ game.continue=Continue
 #---- Forfeit ----
 game.forfeit.title=No Legal Moves
 game.forfeit.message=%s has no legal moves and forfeits the turn.
+
+# ---- Players ----
+dialog.players.title=Enter Player Names
+dialog.players.black=Black Player
+dialog.players.white=White Player
+scoreboard.format=%s %d - %s %d
+
