--- a/app/src/main/resources/messages_de_DE.properties
+++ b/app/src/main/resources/messages_de_DE.properties
@@ -61,3 +61,9 @@ game.continue=Weiter
 # ---- Forfeit ----
 game.forfeit.title=Keine Zuege moeglich
 game.forfeit.message=%s hat keine legalen Zuege und setzt aus.
+
+# ---- Players ----
+dialog.players.title=Namen der Spieler
+dialog.players.black=Schwarzer Spieler
+dialog.players.white=Weiﬂer Spieler
+scoreboard.format=%s %d - %s %d
