--- a/app/src/main/resources/messages_it_IT.properties
+++ b/app/src/main/resources/messages_it_IT.properties
@@ -19,9 +19,10 @@ menu.view.hideHistory=Nascondi Storico
 # Game menu items - OK
 menu.game.new=Nuova Partita
 menu.game.restart=Ricomincia
+menu.game.changePlayers=Cambia Giocatori
 menu.game.selectBoardSize=Seleziona dimensioni scacchiera
 menu.game.boardSize.small=Ridotto (9x9)
-menu.game.boardSize.regular=Normale (19x19) 
+menu.game.boardSize.regular=Normale (19x19)
 menu.game.boardSize.large=Grande (25x25)
 
 # Languages
@@ -61,3 +62,9 @@ game.continue=Continua
 # ---- Forfeit ----
 game.forfeit.title=Nessuna mossa disponibile
 game.forfeit.message=%s non ha mosse disponibili e salta il turno
+
+# ---- Players ----
+dialog.players.title=Inserisci i nomi dei giocatori
+dialog.players.black=Giocatore Nero
+dialog.players.white=Giocatore Bianco
+scoreboard.format=%s %d - %s %d
